# emuformat

./: CMakeLists.txt  LICENSE  README.md  copyfile.py
.github/workflows/: test-build.yml
include/: emuband.h  emucompress.h  emudataset.h  emurat.h
src/: emuband.cpp  emucompress.cpp  emudataset.cpp  emudriver.cpp  emurat.cpp
